[package]
name = "bevy-autoplay"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tobyselway/bevy-autoplay/"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.13.2", features = ["serialize"] }
chrono = "0.4.38"
rmp-serde = "1.3.0"
serde = "1.0.203"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "main"
path = "examples/main.rs"
